# exe-triage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  exe_triage.spec  pyproject.toml
scripts/: build-windows.ps1
src/exe_triage/: analyzer.py  cli.py  models.py
src/exe_triage/analyzers/: file_validator.py  hash_service.py  heuristic_engine.py  indicator_extractor.py  ioc_extractor.py  pe_analyzer.py  signature_analyzer.py  strings_extractor.py  technology_detector.py
src/exe_triage/reporting/: json_reporter.py  terminal_reporter.py
src/exe_triage/rules/: heuristic_rules.py
tests/: conftest.py  test_file_validator.py  test_hash_service.py  test_heuristic_engine.py  test_indicator_extractor.py  test_ioc_extractor.py  test_json_contract.py  test_pe_analyzer.py  test_technology_detector.py
tests/fixtures/: README.md
